--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,16 +1,30 @@
-<h1>Restaurants</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Website</th>
-<!-- beast mode 
-      <th>Today's Hours</th>
-    -->
-    </tr>
-  </thead>
-  <tbody>
-  <!-- show restaurants here -->
-  </tbody>
-</table>
+<center><h1>Restaurants</h1></center>
+<br>
+<br>
+  <head>
+    <style> table, th, td
+      {border: 2px solid black; width: 50%; padding: 10px; text-align: center} 
+    </style>
+  </head> 
+    <tbody>
+      <center><table>
+        <tr>
+          <th> Name </th>
+          <th> Website </th>
+        </tr>
+        <tr>
+               <% @restaurants.each do |rest| %>
+          <td> <%= rest.name %> </td>
+          <td> <%= link_to rest.name, restaurant_path(rest) %> </td>
+        </tr>       
+              <% end %>
+      </table></center>      
+    </tbody>
+
+
+
+
+
+
+
