--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -1,27 +1,26 @@
-<center><h1><%= @restaurant.name %></h1></center>
+<h1><%= @restaurant.name %></h1>
 <br>
 <br>
-<center><h2>Business Hours :</h2></center>
+<h2>Business Hours :</h2>
   <style> table, th, td
       {border: 2px solid black; width: 35%; padding: 10px; text-align: center} 
   </style>
-<tbody>
-    <center><table>
+<table>
+  <tbody>
       <tr>
         <th> Days </th>
         <th> Opens </th>
         <th> Closes </th>
       </tr>
+      <% @restaurant.hours.each do |key, value| %>
         <tr>
-          # <% @restaurants.each do |rest| %>
-
-          <td> <%= rest. *DAYS* %> </td>
-          <td> <%= rest. *OPENS * %> </td>
-          <td> <%= rest. *CLOSES* %> </td>
-        </tr>       
-          <% end %>    
-      </table></center>      
-    </tbody>
+          <td> <%= key %> </td>
+          <td> <%= value["Open"] %> </td>
+          <td> <%= value["Closed"] %> </td>
+        </tr>
+      <% end %>       
+  </tbody>
+</table> 
 
 
 
