headaches and errors

--- a/app/views/restaurants/edit.html.erb
+++ b/app/views/restaurants/edit.html.erb
@@ -1,2 +1,31 @@
-<h1>Restaurants#edit</h1>
-<p>Find me in app/views/restaurants/edit.html.erb</p>
+<h1>Edit Restaurant Information</h1>
+<br>
+<br>
+<%= form_for @restaurant do |f| %>
+		<%= f.label :name %>		
+		<%= f.text_field :name, :size => 80 %>	
+<br>
+<br>	<%= f.label :website, "Website     www." %>
+		<%= f.text_field :website, :size => 77 %>
+<br>
+<br>
+<!-- 	<%= #f.label  :hours[day][hours["Open"]][hours["Closed"]]
+			<% #@restaurant.hours.each do |day, hours| %>
+			<%= #day %>
+        	<%= #hours["Open"] %>
+        	<%= #hours["Closed"] %>
+        	<% #end %>
+		"Days, Open and Closed Hours" %>
+		<%= #f.text_field :hours, :size => 80 %> -->		
+<br>
+<br>
+		<%= f.label :low_price, "Low range price   $" %>
+		<%= f.text_area :low_price %> 
+<br>	
+<br>
+		<%= f.label :high_price, "High range price   $" %>
+		<%= f.text_area :high_price %> 
+<br>	
+<br>
+		<%= f.submit %>   						
+	<% end %>
