no clue what i am doing, but headed to Cloudspace

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,16 @@
  *= require_tree .
  *= require_self
  */
+
+ .notice {
+  color: white ; 
+  background: green;
+ 	
+}
+
+ .warning {
+ 	color: red;
+ 	background: red;
+ 	border: black;
+ }
+
