--- a/app/views/restaurants/new.html.erb
+++ b/app/views/restaurants/new.html.erb
@@ -1,5 +1,6 @@
 <h1>New Restaurant</h1>
 
+<div class= "form">
 <%= form_for @restaurant do |f| %>
   <%= f.label :name %>
   <%= f.text_field :name %>
@@ -15,3 +16,4 @@
 <br>
   <%= f.submit "Submit New Restaurant" %>
 <% end %>
+</div>
