--- a/app/views/restaurants/_restaurant.html.erb
+++ b/app/views/restaurants/_restaurant.html.erb
@@ -1,4 +1,5 @@
-<tr>
+<tr class="restaurants">
   <td><%= link_to restaurant.name, restaurant %></td>
   <td><%= restaurant.website %></td>
+  <td><%= button_to 'Delete', restaurant_path(restaurant), method: :delete, :form_class => 'delete', remote: true %></td>
 </tr>
