--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -5,9 +5,6 @@
     <tr>
       <th>Name</th>
       <th>Website</th>
-<!-- beast mode
-      <th>Today's Hours</th>
-    -->
     </tr>
   </thead>
 
@@ -17,21 +14,4 @@
 </table>
 <br>
 <br>
-<%#= link_to "Add New Restaurant", new_restaurant_path %>
-<h1>New Restaurant</h1>
-
-<%= form_for @restaurant, remote: true do |f| %>
-  <%= f.label :name %>
-  <%= f.text_field :name %>
-<br>
-  <%= f.label :website %>
-  <%= f.text_field :website %>
-<br>
-  <%= f.label :low_price %>
-  <%= f.text_field :low_price %>
-<br>
-  <%= f.label :high_price %>
-  <%= f.text_field :high_price %>
-<br>
-  <%= f.submit "Submit New Restaurant" %>
-<% end %>
+<%= link_to "Add New Restaurant", new_restaurant_path %>
