--- a/app/views/restaurants/_form.html.erb
+++ b/app/views/restaurants/_form.html.erb
@@ -12,5 +12,5 @@
   <%= f.label :high_price %>
   <%= f.text_field :high_price %>
 <br>
-  <%= f.submit "Submit" %>
+  <%= f.submit submit_msg %>
 <% end %>
