--- a/app/views/restaurants/edit.html.erb
+++ b/app/views/restaurants/edit.html.erb
@@ -1,3 +1,3 @@
 <h1>Edit Restaurant</h1>
 
-<%= render partial: 'form', locals: { submit_msg: "Update Restaurant"}  %>
+<%= render partial: 'form', locals: { submit_msg: "Update Restaurant", edit: @restaurant}  %>
