--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -21,6 +21,11 @@
     <% end %>
   </tbody>
 </table>
-
-<%= link_to "Edit Restaurant", edit_restaurant_path(@restaurant) %>
+<br>
+<br>
+<%= link_to "Edit", edit_restaurant_path(@restaurant), id: 'edit_restaurant_link', remote: true %>
 <%= link_to "Delete Restaurant", restaurant_path, method: :delete, data: {confirm: "Are you sure?"} %>
+
+<div class="hidden">
+    <%= render partial: 'form', locals: { submit_msg: "Update Restaurant", restaurant: @restaurant}  %>
+</div>
