--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -22,5 +22,5 @@
   </tbody>
 </table>
 
-<%= link_to "Edit Restaurant", edit_restaurant_path(@restaurant) %>
+<%= link_to "Edit Restaurant", '#', id: 'edit_restaurant_link' %>
 <%= link_to "Delete Restaurant", restaurant_path, method: :delete, data: {confirm: "Are you sure?"} %>
