--- a/app/views/restaurants/_restaurant.html.erb
+++ b/app/views/restaurants/_restaurant.html.erb
@@ -1,7 +1,7 @@
 <tr class= "restaurant_row">
   <td><%= link_to restaurant.name, restaurant %></td>
   <td><%= restaurant.website %></td>
-  <td class= "delete_button", data-confirm="Are you sure?"><%= button_to "delete this restaurant", restaurant_path(restaurant), method: :delete, remote: true %></td>
+  <td class= "delete_button"><%= button_to "delete this restaurant", restaurant_path(restaurant), method: :delete, remote: true, data: {confirm: "Are you sure?"} %></td>
 </tr>
 
 
