--- a/app/views/restaurants/edit.html.erb
+++ b/app/views/restaurants/edit.html.erb
@@ -1,4 +1,5 @@
 <h1>Edit Restaurant</h1>
 
-<%= render 'form' %>
+<%= render partial: 'form', locals: {restaurant: @restaurant, submit_msg: "Edit Restaurant"} %>
 <%= link_to 'Back', restaurants_path %>
+
