--- a/app/views/restaurants/new.html.erb
+++ b/app/views/restaurants/new.html.erb
@@ -1,4 +1,4 @@
 <h1>New Restaurant</h1>
 
-<%= render 'form' %>
+<%= render partial: 'form', locals: {restaurant: @restaurant, submit_msg: "Create New Restaurant"} %>
 <%= link_to 'Back', restaurants_path %>
